syntax = "proto3";
package airbloc.data;
option go_package = "github.com/airbloc/airbloc-go/api/data";

import "proto/types.proto";

/**
 * Data Management API.
 */
service Data {
    rpc Get(DataId) returns (DataResult);
    rpc BatchGet(BatchRequest) returns (BatchGetResult);

    rpc SetPermission(SetDataPermissionRequest) returns (airbloc.common.Result);
    rpc SetPermissionBatch(SetBatchDataPermissionRequest) returns (airbloc.common.Results);

    rpc Delete(DataId) returns (airbloc.common.Result);
    rpc DeleteBatch(BatchRequest) returns (airbloc.common.Results);

    rpc Select(stream DataId) returns (BatchRequest);
    rpc Release(BatchRequest) returns (airbloc.common.Result);
}

message BatchRequest {
    string batchId = 1;
}

message DataId {
    string dataId = 1;
}

message DataResult {
    message Permission {
        string consumerId = 1;
        bool allowAccess = 2;
    }

    string dataId = 1;
    string collectionId = 2;
    string ownerUserAid = 3;
    string uri = 4;
    uint64 registeredAt = 5;
    repeated Permission permissions = 6;
}

message BatchGetResult {
    repeated DataResult data = 1;
}

message SetDataPermissionRequest {
    string dataId = 1;
    string consumerId = 2;
    bool allowAccess = 3;
}

message SetBatchDataPermissionRequest {
    string batchId = 1;
    string consumerId = 2;
    bool allowAccess = 3;
}
